--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Swapnanil's - Portfolio</title>
   <!-- Favicon -->
-  <link rel="icon" href="/img/favicon-big.png" />
+  <link rel="icon" href="/assets/img/favicon-big.png" />
   <meta content="" name="description" />
   <meta content="" name="keywords" />
 
@@ -38,21 +38,21 @@
   <header id="header">
     <div class="d-flex flex-column">
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle" />
+        <img src="assets/img/profile-img1.jpg" alt="" class="img-fluid rounded-circle" />
         <h1 class="text-light"><a href="index.html">Swapnanil Goswami</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://twitter.com/SwapnanilGoswa6" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.facebook.com/babins.goswami" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/ur_average__guy/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
+          <a href="https://join.skype.com/invite/vCBK8KpZcDop" target="_blank" class="skype"><i class="bx bxl-skype"></i></a>
+          <a href="https://www.linkedin.com/in/swapnanil-goswami-298666180/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
       <nav class="nav-menu">
         <ul>
           <li class="active">
-            <a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a>
+            <a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a>
           </li>
           <li>
             <a href="#about"><i class="bx bx-user"></i> <span>About</span></a>
@@ -61,7 +61,7 @@
             <a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a>
           </li>
           <li>
-            <a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a>
+            <a href="#skills"><i class="bx bx-book-content"></i>Skills</a>
           </li>
           <li>
             <a href="#services"><i class="bx bx-server"></i> Services</a>
@@ -164,17 +164,18 @@
     </section>
     <!-- About Section end -->
 
-    <!-- Facts Section -->
-    <section id="facts" class="facts">
+    <!-- Since facts section is not required for now it is being changed to resume section later facts section can be added -->
+    <!-- Resume Section -->
+    <section id="resume" class="resume">
       <div class="container">
         <div class="section-title">
-          <h2>Facts</h2>
+          <h2>Resume</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus soluta sit, facilis veritatis laborum
             magnam delectus unde? Porro, maiores quisquam saepe esse fugit, veniam commodi veritatis repudiandae
             assumenda asperiores sequi cupiditate impedit excepturi sunt?</p>
         </div>
-        <div class="row no-gutters">
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+        <div class="row no-gutters d-flex justify-content-center">
+          <!-- <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box"><i class="icofont-simple-smile"></i>
               <span data-toggle="counter-up">20</span>
               <p><strong>HappyClients</strong></p>
@@ -191,11 +192,12 @@
               <span data-toggle="counter-up">100</span>
               <p><strong>Hours of Support</strong></p>
             </div>
-          </div>
+          </div> -->
+          <button type="button" class="btn btn-outline-primary btn-lg"><a target="_blank" href="https://drive.google.com/file/d/1izIYE68UsoSclqTM2Caqr_tfMQT5DMnY/view?usp=sharing">Download/View Resume</a></button>
         </div>
       </div>
     </section>
-    <!-- End Facts Section -->
+    <!-- End Resume Section -->
 
     <!-- Skills section -->
     <section id="skills" class="skills section-bg">
@@ -208,25 +210,25 @@
         <div class="row skills-content">
           <div class="col-lg-6" data-aos="fade-up">
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
+              <span class="skill">HTML <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">60%</i></span>
+              <span class="skill">CSS <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">JavaScript <i class="val">50%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -234,15 +236,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="progress">
-              <span class="skill">C++ <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Python <i class="val">70%</i></span>
+              <span class="skill">C++ <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -250,9 +244,17 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Java <i class="val">70%</i></span>
+              <span class="skill">Python <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Java <i class="val">50%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -308,7 +310,9 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
+            in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row" data-aos="fade-in">
@@ -318,7 +322,7 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>1st by Lane Lokenath Sarani, Lake Town, 
+                <p>1st by Lane Lokenath Sarani, Lake Town,
                   Siliguri, WB - 734007
                 </p>
               </div>
@@ -335,12 +339,55 @@
                 <p>+91 6379457339</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d944.1406068845602!2d88.42477662982267!3d26.6932577670618!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc5df9e790eeee07c!2sSt.%20Joseph&#39;s%20School%20bhaktinagar!5e0!3m2!1sen!2sin!4v1640105835885!5m2!1sen!2sin"
+                width="100%" height="290px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
 
           </div>
           <!-- Add Contact form Later -->
+          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+              <div class="form-row">
+                <div class="form-group col-md-6">
+                  <label for="name">Your Name</label>
+                  <input type="text" name="name" class="form-control" id="name" data-rule="minlen:4"
+                    data-msg="Please enter at least 4 chars" />
+                  <div class="validate"></div>
+                </div>
+                <div class="form-group col-md-6">
+                  <label for="name">Your Email</label>
+                  <input type="email" class="form-control" name="email" id="email" data-rule="email"
+                    data-msg="Please enter a valid email" />
+                  <div class="validate"></div>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="name">Subject</label>
+                <input type="text" class="form-control" name="subject" id="subject" data-rule="minlen:4"
+                  data-msg="Please enter at least 8 chars of subject" />
+                <div class="validate"></div>
+              </div>
+              <div class="form-group">
+                <label for="name">Message</label>
+                <textarea class="form-control" name="message" rows="10" data-rule="required"
+                  data-msg="Please write something for us"></textarea>
+                <div class="validate"></div>
+              </div>
+              <div class="mb-3">
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">Your message has been sent. Thank you!</div>
+              </div>
+              <div class="text-center"><button type="submit">Send Message</button></div>
+            </form>
+          </div>
+
         </div>
+
+      </div>
+    </section><!-- End Contact Section -->
+    </div>
     </section>
     <!-- Contact Section ending -->
   </main>
@@ -353,7 +400,7 @@
         &copy; Copyright <strong><span>Swapnanil goswami</span></strong>
       </div>
       <div class="credits">
-       Designed and Developed by <a href="#">Swapnanil Goswami</a>
+        Designed and Developed by <a href="#">Swapnanil Goswami</a>
       </div>
     </div>
   </footer>
