More or less completed the frontend part

--- a/index.html
+++ b/index.html
@@ -97,26 +97,22 @@
         <div class="section-title">
           <h2>About</h2>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat
-            reprehenderit dicta iste at amet qui, vero quos perspiciatis illum
-            praesentium eius, molestiae consequuntur, exercitationem ipsam
-            aliquam? Expedita ut repellat quibusdam.
+            I am an upcoming Engineering graduate currently pursuing B.Tech Mechatronics from Hindustan Institute of Technology and Science.
+            I like to explore new technologies and developments in the field of IT, Automation and Robotics which propelled me to create this 
+            website to showcase myself. On addition to this I am also a full stack web and Machine Learning enthusiast.
           </p>
         </div>
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
+            <img src="assets/img/profile-img1.jpg" class="img-fluid" alt="" />
           </div>
           <div class="col-lg-8 pt-lg-0 content" data-aos="fade-let">
             <h3>Full Stack Software Developer</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Laudantium, id numquam earum fugiat officiis magni nostrum
-              exercitationem delectus accusantium nihil deleniti cupiditate,
-              repellendus nobis itaque animi esse placeat distinctio quaerat
-              inventore corporis rem aspernatur. Reiciendis esse quam iure
-              aperiam! Beatae sunt dignissimos corrupti officiis quam magnam,
-              ut adipisci voluptate nesciunt!
+              I grew up in one of the famous cities of West Bengal, Siliguri - The gateway to the North East. Going by the name it is the
+              entry point connecting all the North Eastern states. From my early childhood Sci-fi movies used to amaze me a lot, I would call it
+              my first step towards becoming a techie. Apart from tech and Computer Science I am also an admirer of physics and mathematics, which used
+              to be my favourite subjects in School. I am also a sports enthusiast and love watching and playing football, cricket, badminton, kabaddi etc. 
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -153,10 +149,8 @@
               </div>
             </div>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Placeat accusantium porro distinctio nisi quae fuga id maxime
-              harum itaque impedit ratione corrupti modi minus quasi,
-              laudantium possimus totam nihil molestiae!
+              Currently I am freelance developer and have worked on a few projects for two independent start-ups. You can get to know me in
+              detail by viewing my Resume in the next section.
             </p>
           </div>
         </div>
@@ -170,9 +164,7 @@
       <div class="container">
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus soluta sit, facilis veritatis laborum
-            magnam delectus unde? Porro, maiores quisquam saepe esse fugit, veniam commodi veritatis repudiandae
-            assumenda asperiores sequi cupiditate impedit excepturi sunt?</p>
+          <p>Get to know me in detail by viewing my Resume which can be accessed by clicking on the button below.</p>
         </div>
         <div class="row no-gutters d-flex justify-content-center">
           <!-- <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
@@ -204,8 +196,7 @@
       <div class="container">
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum illo, magni fugiat doloremque delectus
-            pariatur.</p>
+          <p>A basic overview about my skill set whiich I have acquired during my college education.</p>
         </div>
         <div class="row skills-content">
           <div class="col-lg-6" data-aos="fade-up">
@@ -269,31 +260,29 @@
       <div class="container">
         <div class="section-title">
           <h2>Services</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ad sint aut amet expedita voluptate
-            accusamus vel mollitia, sunt corrupti? Inventore, facere excepturi? Saepe, enim.</p>
+          <p>The list of services I provide. Found something in need of ? Feel free to contact me on my social platforms or fill out the contact form below.</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
           <div class="icon"><i class="icofont-computer"></i></div>
-          <h4 class="title"><a href="#">Lorem Ipsum</a></h4>
-          <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit maxime distinctio iste
-            cumque id laboriosam sed maiores sequi eum asperiores.</p>
+          <h4 class="title"><a href="#contact">Web Development</a></h4>
+          <p class="description">I can build fully responsive professional websites for you and your organization 
+            with user friendly experience abiding all the modern trends and traits .</p>
         </div>
 
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
           <div class="icon"><i class="icofont-chart-bar-graph"></i></div>
-          <h4 class="title"><a href="#">Dolor sit</a></h4>
-          <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit maxime distinctio iste
-            cumque id laboriosam sed maiores sequi eum asperiores.</p>
+          <h4 class="title"><a href="#contact">Machine Learning</a></h4>
+          <p class="description">I can build basic end to end Machine Learning Interfaces solving related problems involving data analysis
+            and prediction.</p>
         </div>
 
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-          <div class="icon"><i class="icofont-earth"></i></div>
-          <h4 class="title"><a href="#">Sdipisicing elit</a></h4>
-          <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit maxime distinctio iste
-            cumque id laboriosam sed maiores sequi eum asperiores.</p>
+          <div class="icon"><i class="icofont-google-talk"></i></div>
+          <h4 class="title"><a href="#contact">Social Media Management</a></h4>
+          <p class="description">I can also manage your social media profiles and strategize your content in a right way .</p>
         </div>
       </div>
     </section>
@@ -310,9 +299,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>Feel free to connect with me on my social profiles. If you have any queries or require any of my services go ahead and mail me or just fill out the contact form below.</p>
         </div>
 
         <div class="row" data-aos="fade-in">
