Final Commit 24th Dec 2021

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Swapnanil's - Portfolio</title>
   <!-- Favicon -->
-  <link rel="icon" href="/assets/img/favicon-big.png" />
+  <link rel="icon" href="./assets/img/favicon-big.png" />
   <meta content="" name="description" />
   <meta content="" name="keywords" />
 
@@ -38,7 +38,7 @@
   <header id="header">
     <div class="d-flex flex-column">
       <div class="profile">
-        <img src="assets/img/profile-img1.jpg" alt="" class="img-fluid rounded-circle" />
+        <img src="assets/img/profile-img2.jpg" alt="" class="img-fluid rounded-circle" />
         <h1 class="text-light"><a href="index.html">Swapnanil Goswami</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/SwapnanilGoswa6" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
@@ -104,7 +104,7 @@
         </div>
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img1.jpg" class="img-fluid" alt="" />
+            <img src="assets/img/profile-img2.jpg" class="img-fluid" alt="" />
           </div>
           <div class="col-lg-8 pt-lg-0 content" data-aos="fade-let">
             <h3>Full Stack Software Developer</h3>
@@ -332,9 +332,9 @@
             </div>
 
           </div>
-          <!-- Add Contact form Later -->
+          <!-- Contact form  -->
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="https://formsubmit.co/goswamibabin7@gmail.com" method="POST" role="form" class="php-email-form">
               <div class="form-row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
