--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
           </div>
           <!-- Contact form  -->
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="https://formspree.io/f/mgedvwjn" method="POST" role="form" class="php-email-form">
+            <form action="https://formspree.io/f/mgedvwjn" method="post" role="form" class="php-email-form">
               <div class="form-row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
